# temporal

./: .gitignore  .pylintrc  DESIGN.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_pylint.sh  setup.bak.py  setup.py
docs/: _config.yml  index.md  why.md
temporal/: __init__.py  __init__.pyi  core.py  cron.py  helpers.py  hooks.py  modules.txt  redis.py  result.py  test_temporal.py
temporal/config/: desktop.py  docs.py  temporal.py
temporal/crontab/: __init__.py  tests.py
temporal/dbsync/: __init__.py
temporal/temporal/: __init__.py
temporal/temporal/doctype/: __init__.py
temporal/temporal/doctype/temporal_dates/: temporal_dates.json  temporal_dates.py  test_temporal_dates.py
temporal/temporal/doctype/temporal_manager/: __init__.py  temporal_manager.js  temporal_manager.json  temporal_manager.py
temporal/temporal/doctype/temporal_panel/: temporal_panel.py
temporal/temporal/workspace/development/: development.json
temporal/temporal/workspace/temporal/: temporal.json
temporal/temporal_core/: __init__.py
temporal/temporal_core/doctype/: __init__.py
temporal/temporal_core/doctype/temporal_dates/: temporal_dates.js  temporal_dates.json  temporal_dates.py
temporal/temporal_core/doctype/temporal_manager/: rebuild_dates_table.sql  temporal_manager.js  temporal_manager.json  temporal_manager.py  test_temporal_manager.py
temporal/temporal_core/sql_statements/: populate_temporal_dates.sql
temporal/temporal_core/workspace/development/: development.json
temporal/temporal_core/workspace/temporal/: temporal.json
